--- a/pages/commissions/index.html
+++ b/pages/commissions/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>applesfruit - Home</title>
+    <title>applesfruit - Commissions</title>
     <link rel="stylesheet" href="../../style.css">
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/kute.js@2.2.0/dist/kute.min.js"></script>
@@ -28,16 +28,13 @@
         <div class="intro">
 
             <div id="hello">
-                <h1>About <a id="l">applesfruit</a>.</h1>
+                <h1><a id="l">Commissions</a>.</h1>
             </div>
 
             <div class="desc">
 
                 <br>
-                <p>I am a self-taught developer based in California, United States. I currently focus on Python, Java, and NodeJS projects but I am willing to branch out into other languages. I have been coding since I was 9 years old and stil continue to code 5 years later. I do web development here and there but it is mainly for personal projects.
-                <br>I am fluent in: Java, C#, Python, JS, HTML, CSS, and comtinuing to learn more.
-                <br>I know: C/C++, React
-                <br>I am currently working on many projects and continue to do MC related projects for a while :).
+                <p>Commissions are open but may close soon due to lack of demand. DM me on Discord for more information on pricing, delivery time, and more: fruits#1845
                 </p>
 
 
