--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 
             <div id="hello">
                 <h1>Hey! My name is <a id="l">applesfruit</a>.</h1>
-            </div>
-
-            <h1 class="placeholder">I am working on <strong id="placeholder"></strong></h1>
+                <h1>I am working on <strong id="placeholder"></strong></h1>
                 <script>
                     var id = document.getElementById("placeholder");
                     var type = new Typewriter(id, {
@@ -55,6 +53,7 @@
                         .pauseFor(1000)
                         .start();
                 </script>
+            </div>
 
             <div class="desc">
 
