--- a/pages/commissions/index.html
+++ b/pages/commissions/index.html
@@ -17,8 +17,8 @@
 
                 <ul>
                     <li><a href="https://applesfruit.is-a.dev">Home</a></li>
-                    <li><a href="../commissions/">Commissions</a></li>
-                    <li><a href="">About Me</a></li>
+                    <li><a href="">Commissions</a></li>
+                    <li><a href="../about-me/">About Me</a></li>
                 </ul>
 
             </nav>
