create projects n shiii

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
                 <ul>
                     <li><a href="">Home</a></li>
+                    <li><a href="/pages/projects/">Projects</a></li>
                     <li><a href="/pages/commissions/">Commissions</a></li>
                     <li><a href="/pages/about-me/">About Me</a></li>
                 </ul>
