--- a/pages/about-me/index.html
+++ b/pages/about-me/index.html
@@ -17,6 +17,7 @@
 
                 <ul>
                     <li><a href="https://applesfruit.is-a.dev">Home</a></li>
+                    <li><a href="../projects/">Projects</a></li>
                     <li><a href="../commissions/">Commissions</a></li>
                     <li><a href="">About Me</a></li>
                 </ul>
