--- a/pages/commissions/index.html
+++ b/pages/commissions/index.html
@@ -16,9 +16,12 @@
             <nav>
 
                 <ul>
-                    <li><a href="https://applesfruit.is-a.dev">Home</a></li>
-                    <li><a href="">Commissions</a></li>
-                    <li><a href="../about-me/">About Me</a></li>
+                    <ul>
+                        <li><a href="https://applesfruit.is-a.dev">Home</a></li>
+                        <li><a href="../projects/">Projects</a></li>
+                        <li><a href="">Commissions</a></li>
+                        <li><a href="../about-me/">About Me</a></li>
+                    </ul>
                 </ul>
 
             </nav>
