--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,11 +1,13 @@
+<!-- /adload/downloads/ezstats/v1-129301-52-/ezstats-1.0.jar -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>applesfruit - Commissions</title>
-    <link rel="stylesheet" href="../../style.css">
+    <title>applesfruit - Home</title>
+    <link rel="stylesheet" href="../style.css">
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/kute.js@2.2.0/dist/kute.min.js"></script>
 </head>
@@ -16,12 +18,8 @@
             <nav>
 
                 <ul>
-                    <ul>
-                        <li><a href="https://applesfruit.is-a.dev">Home</a></li>
-                        <li><a href="../projects/">Projects</a></li>
-                        <li><a href="">Commissions</a></li>
-                        <li><a href="../about-me/">About Me</a></li>
-                    </ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="">Downloads</a></li>
                 </ul>
 
             </nav>
@@ -31,14 +29,15 @@
         <div class="intro">
 
             <div id="hello">
-                <h1><a id="l">Commissions</a>.</h1>
+                <h1><a id="l">Minecraft Forge Projects (Mods)</a></h1>
+                <br><br>
+                <h2>EZStats</h2>
             </div>
 
             <div class="desc">
 
-                <br>
-                <p>Commissions are open but may close soon due to lack of demand. DM me on Discord for more information on pricing, delivery time, and more: fruits#1845
-                </p>
+            <p>Description: EZStats is a Forge <b>1.7.10</b> Mod that allows players to access easy statistics.</p>
+            <p><a href="">Download EZStats</a></p>
 
 
             </div>
@@ -50,7 +49,7 @@
 
     </div>
 
-    <script src="../../script.js"></script>
+    <script src="../script.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
 </html>
