--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="/pages/projects/">Projects</a></li>
-                    <li><a href="/pages/commissions/">Commissions</a></li>
-                    <li><a href="/pages/about-me/">About Me</a></li>
+                    <li><a href="/downloads/">Downloads</a></li>
                 </ul>
 
             </nav>
@@ -44,36 +42,27 @@
                         .pauseFor(2500)
                         .deleteChars(8)
                         .pauseFor(1000)
-                        .typeString("Reflex Hosting.")
-                        .pauseFor(2500)
-                        .deleteChars(15)
-                        .pauseFor(1000)
-                        .typeString("Arctic Development.")
+                        .typeString("Optimized Renderer.")
                         .pauseFor(2500)
                         .deleteChars(19)
                         .pauseFor(1000)
+                        .typeString("Arctic Studios.")
+                        .pauseFor(2500)
+                        .deleteChars(15)
+                        .pauseFor(1000)
                         .start();
-                </script>
+                </script>      
             </div>
-
             <div class="desc">
-
                 <br>
                 <p>I am a self-taught developer. I work with many languages like Java, Kotlin, NodeJS, Python, C#, C++, and C.</p>
-                <p>I am currently working on a couple projects, you can look at them by clicking <a href="https://github.com/applesfruit" target="_blank">here</a>.</p>
+                <p>I am currently working on a couple projects, you can view some of my Minecraft Forge related projects <a href="/downloads/">here</a>.</p>
                 <br>
-                <a href="/pages/about-me/" id="abt">Learn more about me!</a>
-                <br><br>
-                <a href="pages/commissions/" id="abt">Interested in commissions?</a>
-
-
+                <p>Projects: <br>
+                - <a href="/downloads/">EZStats</a> (Forge 1.7.10 Mod that allows players to access easy statistics) <br>
+                - Optimized Renderer (Forge 1.7.10 Mod that tries to boost FPS by modifying the different renderers)</p>
             </div>
-
         </div>
-
-
-
-
     </div>
 
     <script src="/script.js"></script>
