--- a/downloads/index.html
+++ b/downloads/index.html
@@ -37,7 +37,7 @@
             <div class="desc">
 
             <p>Description: EZStats is a Forge <b>1.7.10</b> Mod that allows players to access easy statistics.</p>
-            <p><a href="http://adfoc.us/7805171">Download EZStats</a></p>
+            <p><a href="../adload/downloads/ezstats/v1-129301-52-/ezstats-1.0.jar">Download EZStats</a></p>
 
 
             </div>
